Fix:WithDrawPage Align

--- a/src/pages/withdraw/continue/cwithdraw.module.css
+++ b/src/pages/withdraw/continue/cwithdraw.module.css
@@ -59,7 +59,7 @@
   grid-gap: 15px;
 }
 .row2 {
-  align-items: center;
+  align-items: flex-start !important;
 }
 .underdollar {
   text-align: right;
